# AI-Alzheimers-Detection

./: LICENSE  README.md  app.py  gitignore.txt  health_check.py  login_module.py  main.py  pyproject.toml  requirements.txt
