[project]
name = "alzimers-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=5.41.0",
    "keras>=3.11.1",
    "matplotlib>=3.10.5",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "rich>=14.1.0",
    "scikit-learn>=1.7.1",
    "tensorflow>=2.19.0",
    "pyngrok",
    "streamlit>=1.50.0",
    "plotly>=6.3.1",
]
